# syllarust

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: CI.yml
src/: lib.rs  main.rs  readability.rs
