[package]
name = "syllarust"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
description = "A simple crate for quickly counting syllables"
repository = "https://github.com/cyalen/syllable-rs"
readme = "README.md"
authors = ["cyalen"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8.4"
lazy_static = "1.4.0"
rayon = "1.9.0"
