[package]
name = "syllarust"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
description = "A simple crate for quickly counting syllables"
repository = "https://github.com/cyalen/syllable-rs"
readme = "README.md"
authors = ["cyalen"]
keywords = ["syllables", "NLP", "text", "language"]
categories = ["Text processing"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "syllarust"
crate-type = ["cdylib"]

[dependencies]
regex = "1.8.4"
lazy_static = "1.4.0"
rayon = "1.9.0"
pyo3 = "0.22.0"
serde_json = "1.0.68"
