[package]
name = "syllarust"
version = "0.2.1"
edition = "2021"
license = "Apache-2.0"
description = "A simple crate for quickly counting syllables"
repository = "https://github.com/cyalen/syllarust"
readme = "README.md"
authors = ["cyalen"]
keywords = ["syllables", "NLP", "text", "language"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "syllarust"
crate-type = ["cdylib", "rlib"]

[dependencies]
regex = "1.8.4"
lazy_static = "1.4.0"
rayon = "1.9.0"
pyo3 = "0.25.1"
serde_json = "1.0.68"
