[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "syllarust"
requires-python = ">=3.8"
version = "0.2.1"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "A simple library for quickly counting syllables"
[tool.maturin]
features = ["pyo3/extension-module"]
